# lcvgc

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.ja.md  README.md  TODO.md  project.yml
.claude/: settings.json  settings.local.json
.claude/hooks/: pre-commit-version-check.sh
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
benches/: parser_bench.rs
crates/lcvgc/: Cargo.toml  build.rs
crates/lcvgc-core/: Cargo.toml
crates/lcvgc-core/benches/: parser_bench.rs
crates/lcvgc-core/src/: error.rs  lib.rs
crates/lcvgc-core/src/ast/: clip.rs  clip_cc.rs  clip_drum.rs  clip_note.rs  common.rs  device.rs  include.rs  instrument.rs  kit.rs  mod.rs  playback.rs  scale.rs  scene.rs  session.rs  tempo.rs  unresolved.rs  var.rs
crates/lcvgc-core/src/engine/: clock.rs  compiler.rs  config.rs  device_event.rs  error.rs  evaluator.rs  midi_sink.rs  mod.rs  playback.rs  player.rs  registry.rs  resolver.rs  scene_runner.rs  scope.rs  session_runner.rs  shuffle.rs  state.rs  tick_loop.rs  watcher.rs
crates/lcvgc-core/src/lsp/: analyzer.rs  completion.rs  context.rs  diagnostic.rs  diatonic.rs  goto_def.rs  hover.rs  mod.rs  span_parser.rs  symbols.rs
crates/lcvgc-core/src/midi/: cc.rs  chord.rs  gate.rs  message.rs  mod.rs  monitor.rs  note.rs  port.rs  probability.rs  velocity.rs
crates/lcvgc-core/src/parser/: clip.rs  clip_arpeggio.rs  clip_articulation.rs  clip_bar_jump.rs  clip_cc.rs  clip_drum.rs  clip_note.rs  clip_options.rs  clip_repetition.rs  clip_shorthand.rs  common.rs  device.rs  include.rs  instrument.rs  kit.rs  mod.rs  playback.rs  scale.rs  scene.rs  session.rs  tempo.rs  var.rs
crates/lcvgc-core/src/server/: handler.rs  mod.rs  protocol.rs
crates/lcvgc-core/tests/: include_integration.rs  integration.rs  variable_expansion.rs
crates/lcvgc-lsp/: Cargo.toml  build.rs
crates/lcvgc/src/: cli.rs  lib.rs  main.rs
crates/lcvgc/tests/: apply_device_event.rs  device_event_receiver.rs
plugin/lcvgc.nvim/: README.ja.md  README.md
specs/: lcvgc-dsl-spec.ja.md  lcvgc-dsl-spec.md  lsp-in-out.ja.md  lsp-in-out.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/ast/: clip_note.rs  device.rs  mod.rs  scale.rs  scene.rs  session.rs  tempo.rs
src/engine/: compiler.rs  error.rs  evaluator.rs  midi_sink.rs  mod.rs  player.rs  registry.rs  session_runner.rs  shuffle.rs  state.rs  watcher.rs
tests/: integration.rs
tree-sitter-lcvgc/: grammar.js  package.json
(+47 files in other folders)
