[package]
name = "lcvgc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
nom = "7"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
