[package]
name = "lcvgc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
nom = "7"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
midir = "0.10"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
