[package]
name = "lcvgc"
version = "0.7.12"
edition = "2021"

[lib]
name = "lcvgc"
path = "src/lib.rs"

[[bin]]
name = "lcvgc"
path = "src/main.rs"

[dependencies]
lcvgc-core = { path = "../lcvgc-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
